# demo-langfuse

./: README.md
chat-api/: main.py  pyproject.toml  settings.toml  settings.yaml
chat-api/src/: llm.py  request_model.py
chat-app/: package.json
chat-app/app/: layout.tsx  page.tsx
infra/docker/: .env
